comments and proxying now syntax-good

--- a/chrome/app/scraps/launch.html
+++ b/chrome/app/scraps/launch.html
@@ -15,6 +15,23 @@
     <div>
       Used for testing/debugging. TODO: add a version of the UI here too; tell the user to install the extension if needed.
     </div>
+
+<!-- <script type="text/javascript" src="sctp-peerconnection-test.js"></script>
+-->
+
+<!--
+  <script type="text/javascript" src="../common/backend/util.js"></script>
+  <script type="text/javascript" src="../common/backend/client/client.js"></script>
+  <script type="text/javascript" src="../common/backend/client/tcp-server.js"></script>
+  <script type="text/javascript" src="../common/backend/client/socks.js"></script>
+-->
+
+<!--
+  <script type="text/javascript" src="../common/backend/util.js"></script>
+  <script type="text/javascript" src="../common/backend/server/server.js"></script>
+  <script type="text/javascript" src="../common/backend/server/webclient.js"></script>
+-->
+
   <!--
     <script type="text/javascript" src="tcp-server2.js"></script>
     <script type="text/javascript" src="socks.js"></script>
